[iOS] Fix layout of form resubmission dialog.

This CL updates the dialog location to be calculated in
the BVC's coordinate space and updates RepostFormCoordinator
to use its baseViewController's view for the coordinate
space.

Bug: 901885
Change-Id: I9856dc041cc49a78d7f916e6662bf838d0ac5f44
Reviewed-on: https://chromium-review.googlesource.com/c/1379036
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618729}