ios/chrome/browser/ui/alert_coordinator/repost_form_coordinator.h
@@ -18,10 +18,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 // Initializes a coordinator for displaying an alert on this |viewController|.
 // |dialogLocation| is a point where the repost form dialog should be presented
-// on iPad. |webState| must not be null and must be owned by the caller.
-// |completionHandler| will be called with YES when Continue button is tapped
-// and with NO when Cancel button is tapped. |completionHandler| can not be
-// null.
+// on iPad (in |viewController|'s coordinate space). |webState| must not be null
+// and must be owned by the caller. |completionHandler| will be called with YES
+// when Continue button is tapped and with NO when Cancel button is tapped.
+// |completionHandler| can not be null.
 - (instancetype)initWithBaseViewController:(UIViewController*)viewController
                             dialogLocation:(CGPoint)dialogLocation
                                   webState:(web::WebState*)webState
