ios/chrome/browser/ui/alert_coordinator/repost_form_coordinator.mm
@@ -49,7 +49,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     _webState = webState;
     CGRect sourceRect = CGRectMake(dialogLocation.x, dialogLocation.y, 1, 1);
     _dialogController =
-        [[self class] newDialogControllerForSourceView:webState->GetView()
+        [[self class] newDialogControllerForSourceView:viewController.view
                                             sourceRect:sourceRect
                                      completionHandler:completionHandler];
     // The dialog may be dimissed when a new navigation starts while the dialog
@@ -67,7 +67,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     return;
 
   // Check to see if an action sheet can be shown.
-  if ([_webState->GetView() window]) {
+  if (self.baseViewController.view.window &&
+      !self.baseViewController.presentedViewController) {
     [self.baseViewController presentViewController:_dialogController
                                           animated:YES
                                         completion:nil];
