ios/chrome/browser/ui/alert_coordinator/repost_form_coordinator_unittest.mm
@@ -31,9 +31,6 @@ class RepostFormCoordinatorTest : public PlatformTest {
  protected:
   RepostFormCoordinatorTest() {
     view_controller_ = [[UIViewController alloc] init];
-    [scoped_key_window_.Get() setRootViewController:view_controller_];
-    UIView* view = [[UIView alloc] initWithFrame:view_controller_.view.bounds];
-    web_state_.SetView(view);
 
     CGPoint dialogLocation =
         CGPointMake(kDialogHorizontalLocation, kDialogVerticalLocation);
@@ -52,7 +49,7 @@ class RepostFormCoordinatorTest : public PlatformTest {
 
   // Coordinator will not present the dialog until view is added to the window.
   void AddViewToWindow() {
-    [view_controller_.view addSubview:web_state_.GetView()];
+    [scoped_key_window_.Get() setRootViewController:view_controller_];
   }
 
   RepostFormCoordinator* coordinator_;
